// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template A > fixture en-short is valid for the template and renders a stable page 1`] = `
"<!doctype html>
<html lang="en" data-template="A" data-template-version="1.0.0">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=1080,initial-scale=1">
<style>
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
*{box-sizing:border-box;margin:0;padding:0}
html,body{width:1080px;height:1350px;background:#fff;overflow:hidden}
.rc-slide{position:relative;width:1080px;height:1350px;overflow:hidden;background:var(--rc-bg);color:var(--rc-text);font-family:var(--rc-font-body);-webkit-font-smoothing:antialiased;hyphens:none;-webkit-hyphens:none;font-kerning:normal;text-rendering:geometricPrecision}
.slot{overflow:hidden;overflow-wrap:break-word;word-break:normal}
.slot.display{font-family:var(--rc-font-display);line-height:1.12;text-wrap:balance;font-weight:600}
.slot.body{font-family:var(--rc-font-body);line-height:1.3;font-weight:400}
.img{display:block;object-fit:cover}
.img-missing{background:repeating-linear-gradient(45deg,#e8e2d8,#e8e2d8 12px,#f4f0e8 12px,#f4f0e8 24px)}
.rc-logo{position:absolute;display:flex;align-items:center;font-family:var(--rc-font-display);font-weight:700;letter-spacing:.02em;color:var(--rc-text)}
.rc-logo img{display:block;height:100%;width:auto}
.rc-page{position:absolute;right:var(--rc-safe-margin);bottom:var(--rc-safe-margin);font-family:var(--rc-font-body);font-size:24px;line-height:1;color:var(--rc-text);opacity:.6}
.a-hero{position:absolute;inset:0;width:100%;height:100%}
.a-shade{position:absolute;inset:0;background:linear-gradient(to top,rgba(14,10,6,.82) 0%,rgba(14,10,6,.55) 38%,rgba(14,10,6,0) 68%)}
.a-text{position:absolute;left:var(--rc-safe-margin);right:var(--rc-safe-margin);bottom:calc(var(--rc-safe-margin) + 48px + 44px);display:flex;flex-direction:column;gap:20px;color:#fff;text-shadow:0 2px 18px rgba(0,0,0,.35)}
.a-kicker{color:var(--rc-accent-on-dark,#F2B38E);text-transform:uppercase;letter-spacing:.14em;font-weight:600}
.a-sub{opacity:.92}
[data-template="A"] .rc-logo,[data-template="A"] .rc-page{color:#fff}
</style>
</head>
<body>
<div class="rc-slide" data-slide-id="fx-en-short" data-template="A" style="--rc-bg:#FAF6EF;--rc-surface:#FFFFFF;--rc-text:#1F1B16;--rc-accent:#B5532F;--rc-positive:#3F7D4E;--rc-negative:#B3382C;--rc-font-display:"Fraunces", serif;--rc-font-body:"Inter", sans-serif;--rc-safe-margin:72px;">
<img class="img a-hero" data-image="hero" alt="" src="data:image/webp;base64,UklGRg==">
<div class="a-shade"></div>
<div class="a-text">

<div class="slot display a-headline" data-slot="headline" data-fit data-fit-min="64" data-fit-max="96" style="font-size:96px;max-height:323px">Stop rinsing your pasta</div>

</div>
<div class="rc-logo" data-logo style="bottom:var(--rc-safe-margin);left:var(--rc-safe-margin);height:48px;font-size:29px">Reg.Chef</div>
<div class="rc-page" data-page>1/6</div>
</div>
<script>(function () {
  var STEP = 2;
  function overflows(el) {
    return el.scrollHeight > el.clientHeight + 1 || el.scrollWidth > el.clientWidth + 1;
  }
  function fit() {
    var nodes = document.querySelectorAll("[data-fit]");
    for (var i = 0; i < nodes.length; i++) {
      var el = nodes[i];
      var max = Number(el.getAttribute("data-fit-max"));
      var min = Number(el.getAttribute("data-fit-min"));
      var size = max;
      el.style.fontSize = size + "px";
      while (size > min && overflows(el)) {
        size = Math.max(min, size - STEP);
        el.style.fontSize = size + "px";
      }
      if (overflows(el)) el.setAttribute("data-overflow", "true");
      el.setAttribute("data-font-px", String(size));
    }
    document.documentElement.setAttribute("data-fit-done", "true");
  }
  window.__rcFit = fit;
  var ready = document.fonts && document.fonts.ready ? document.fonts.ready : Promise.resolve();
  ready.then(fit, fit);
})();</script>
</body>
</html>
"
`;

exports[`template A > fixture es-long is valid for the template and renders a stable page 1`] = `
"<!doctype html>
<html lang="en" data-template="A" data-template-version="1.0.0">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=1080,initial-scale=1">
<style>
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
*{box-sizing:border-box;margin:0;padding:0}
html,body{width:1080px;height:1350px;background:#fff;overflow:hidden}
.rc-slide{position:relative;width:1080px;height:1350px;overflow:hidden;background:var(--rc-bg);color:var(--rc-text);font-family:var(--rc-font-body);-webkit-font-smoothing:antialiased;hyphens:none;-webkit-hyphens:none;font-kerning:normal;text-rendering:geometricPrecision}
.slot{overflow:hidden;overflow-wrap:break-word;word-break:normal}
.slot.display{font-family:var(--rc-font-display);line-height:1.12;text-wrap:balance;font-weight:600}
.slot.body{font-family:var(--rc-font-body);line-height:1.3;font-weight:400}
.img{display:block;object-fit:cover}
.img-missing{background:repeating-linear-gradient(45deg,#e8e2d8,#e8e2d8 12px,#f4f0e8 12px,#f4f0e8 24px)}
.rc-logo{position:absolute;display:flex;align-items:center;font-family:var(--rc-font-display);font-weight:700;letter-spacing:.02em;color:var(--rc-text)}
.rc-logo img{display:block;height:100%;width:auto}
.rc-page{position:absolute;right:var(--rc-safe-margin);bottom:var(--rc-safe-margin);font-family:var(--rc-font-body);font-size:24px;line-height:1;color:var(--rc-text);opacity:.6}
.a-hero{position:absolute;inset:0;width:100%;height:100%}
.a-shade{position:absolute;inset:0;background:linear-gradient(to top,rgba(14,10,6,.82) 0%,rgba(14,10,6,.55) 38%,rgba(14,10,6,0) 68%)}
.a-text{position:absolute;left:var(--rc-safe-margin);right:var(--rc-safe-margin);bottom:calc(var(--rc-safe-margin) + 48px + 44px);display:flex;flex-direction:column;gap:20px;color:#fff;text-shadow:0 2px 18px rgba(0,0,0,.35)}
.a-kicker{color:var(--rc-accent-on-dark,#F2B38E);text-transform:uppercase;letter-spacing:.14em;font-weight:600}
.a-sub{opacity:.92}
[data-template="A"] .rc-logo,[data-template="A"] .rc-page{color:#fff}
</style>
</head>
<body>
<div class="rc-slide" data-slide-id="fx-es-long" data-template="A" style="--rc-bg:#FAF6EF;--rc-surface:#FFFFFF;--rc-text:#1F1B16;--rc-accent:#B5532F;--rc-positive:#3F7D4E;--rc-negative:#B3382C;--rc-font-display:"Fraunces", serif;--rc-font-body:"Inter", sans-serif;--rc-safe-margin:72px;">
<img class="img a-hero" data-image="hero" alt="" src="data:image/webp;base64,UklGRg==">
<div class="a-shade"></div>
<div class="a-text">
<div class="slot display a-kicker" data-slot="kicker" data-fit data-fit-min="28" data-fit-max="34" style="font-size:34px;max-height:38px">Error común</div>
<div class="slot display a-headline" data-slot="headline" data-fit data-fit-min="64" data-fit-max="96" style="font-size:96px;max-height:323px">¿Por qué el arroz del domingo siempre queda pegajoso?</div>
<div class="slot body a-sub" data-slot="subline" data-fit data-fit-min="32" data-fit-max="38" style="font-size:38px;max-height:99px">Tres gestos que cambian el resultado, sin comprar nada nuevo.</div>
</div>
<div class="rc-logo" data-logo style="bottom:var(--rc-safe-margin);left:var(--rc-safe-margin);height:48px;font-size:29px">Reg.Chef</div>
<div class="rc-page" data-page>1/6</div>
</div>
<script>(function () {
  var STEP = 2;
  function overflows(el) {
    return el.scrollHeight > el.clientHeight + 1 || el.scrollWidth > el.clientWidth + 1;
  }
  function fit() {
    var nodes = document.querySelectorAll("[data-fit]");
    for (var i = 0; i < nodes.length; i++) {
      var el = nodes[i];
      var max = Number(el.getAttribute("data-fit-max"));
      var min = Number(el.getAttribute("data-fit-min"));
      var size = max;
      el.style.fontSize = size + "px";
      while (size > min && overflows(el)) {
        size = Math.max(min, size - STEP);
        el.style.fontSize = size + "px";
      }
      if (overflows(el)) el.setAttribute("data-overflow", "true");
      el.setAttribute("data-font-px", String(size));
    }
    document.documentElement.setAttribute("data-fit-done", "true");
  }
  window.__rcFit = fit;
  var ready = document.fonts && document.fonts.ready ? document.fonts.ready : Promise.resolve();
  ready.then(fit, fit);
})();</script>
</body>
</html>
"
`;

exports[`template A > fixture max-length is valid for the template and renders a stable page 1`] = `
"<!doctype html>
<html lang="en" data-template="A" data-template-version="1.0.0">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=1080,initial-scale=1">
<style>
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
*{box-sizing:border-box;margin:0;padding:0}
html,body{width:1080px;height:1350px;background:#fff;overflow:hidden}
.rc-slide{position:relative;width:1080px;height:1350px;overflow:hidden;background:var(--rc-bg);color:var(--rc-text);font-family:var(--rc-font-body);-webkit-font-smoothing:antialiased;hyphens:none;-webkit-hyphens:none;font-kerning:normal;text-rendering:geometricPrecision}
.slot{overflow:hidden;overflow-wrap:break-word;word-break:normal}
.slot.display{font-family:var(--rc-font-display);line-height:1.12;text-wrap:balance;font-weight:600}
.slot.body{font-family:var(--rc-font-body);line-height:1.3;font-weight:400}
.img{display:block;object-fit:cover}
.img-missing{background:repeating-linear-gradient(45deg,#e8e2d8,#e8e2d8 12px,#f4f0e8 12px,#f4f0e8 24px)}
.rc-logo{position:absolute;display:flex;align-items:center;font-family:var(--rc-font-display);font-weight:700;letter-spacing:.02em;color:var(--rc-text)}
.rc-logo img{display:block;height:100%;width:auto}
.rc-page{position:absolute;right:var(--rc-safe-margin);bottom:var(--rc-safe-margin);font-family:var(--rc-font-body);font-size:24px;line-height:1;color:var(--rc-text);opacity:.6}
.a-hero{position:absolute;inset:0;width:100%;height:100%}
.a-shade{position:absolute;inset:0;background:linear-gradient(to top,rgba(14,10,6,.82) 0%,rgba(14,10,6,.55) 38%,rgba(14,10,6,0) 68%)}
.a-text{position:absolute;left:var(--rc-safe-margin);right:var(--rc-safe-margin);bottom:calc(var(--rc-safe-margin) + 48px + 44px);display:flex;flex-direction:column;gap:20px;color:#fff;text-shadow:0 2px 18px rgba(0,0,0,.35)}
.a-kicker{color:var(--rc-accent-on-dark,#F2B38E);text-transform:uppercase;letter-spacing:.14em;font-weight:600}
.a-sub{opacity:.92}
[data-template="A"] .rc-logo,[data-template="A"] .rc-page{color:#fff}
</style>
</head>
<body>
<div class="rc-slide" data-slide-id="fx-max-length" data-template="A" style="--rc-bg:#FAF6EF;--rc-surface:#FFFFFF;--rc-text:#1F1B16;--rc-accent:#B5532F;--rc-positive:#3F7D4E;--rc-negative:#B3382C;--rc-font-display:"Fraunces", serif;--rc-font-body:"Inter", sans-serif;--rc-safe-margin:72px;">
<img class="img a-hero" data-image="hero" alt="" src="data:image/webp;base64,UklGRg==">
<div class="a-shade"></div>
<div class="a-text">
<div class="slot display a-kicker" data-slot="kicker" data-fit data-fit-min="28" data-fit-max="34" style="font-size:34px;max-height:38px">Kicker Kicker Kicker Kic</div>
<div class="slot display a-headline" data-slot="headline" data-fit data-fit-min="64" data-fit-max="96" style="font-size:96px;max-height:323px">Una frase larga para el límite Una frase larga para el límite Una fras</div>
<div class="slot body a-sub" data-slot="subline" data-fit data-fit-min="32" data-fit-max="38" style="font-size:38px;max-height:99px">Subtítulo con el máximo de caracteres permitido Subtítulo con el máximo de caracteres perm</div>
</div>
<div class="rc-logo" data-logo style="bottom:var(--rc-safe-margin);left:var(--rc-safe-margin);height:48px;font-size:29px">Reg.Chef</div>
<div class="rc-page" data-page>1/6</div>
</div>
<script>(function () {
  var STEP = 2;
  function overflows(el) {
    return el.scrollHeight > el.clientHeight + 1 || el.scrollWidth > el.clientWidth + 1;
  }
  function fit() {
    var nodes = document.querySelectorAll("[data-fit]");
    for (var i = 0; i < nodes.length; i++) {
      var el = nodes[i];
      var max = Number(el.getAttribute("data-fit-max"));
      var min = Number(el.getAttribute("data-fit-min"));
      var size = max;
      el.style.fontSize = size + "px";
      while (size > min && overflows(el)) {
        size = Math.max(min, size - STEP);
        el.style.fontSize = size + "px";
      }
      if (overflows(el)) el.setAttribute("data-overflow", "true");
      el.setAttribute("data-font-px", String(size));
    }
    document.documentElement.setAttribute("data-fit-done", "true");
  }
  window.__rcFit = fit;
  var ready = document.fonts && document.fonts.ready ? document.fonts.ready : Promise.resolve();
  ready.then(fit, fit);
})();</script>
</body>
</html>
"
`;

exports[`template A > fixture no-optionals is valid for the template and renders a stable page 1`] = `
"<!doctype html>
<html lang="en" data-template="A" data-template-version="1.0.0">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=1080,initial-scale=1">
<style>
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
*{box-sizing:border-box;margin:0;padding:0}
html,body{width:1080px;height:1350px;background:#fff;overflow:hidden}
.rc-slide{position:relative;width:1080px;height:1350px;overflow:hidden;background:var(--rc-bg);color:var(--rc-text);font-family:var(--rc-font-body);-webkit-font-smoothing:antialiased;hyphens:none;-webkit-hyphens:none;font-kerning:normal;text-rendering:geometricPrecision}
.slot{overflow:hidden;overflow-wrap:break-word;word-break:normal}
.slot.display{font-family:var(--rc-font-display);line-height:1.12;text-wrap:balance;font-weight:600}
.slot.body{font-family:var(--rc-font-body);line-height:1.3;font-weight:400}
.img{display:block;object-fit:cover}
.img-missing{background:repeating-linear-gradient(45deg,#e8e2d8,#e8e2d8 12px,#f4f0e8 12px,#f4f0e8 24px)}
.rc-logo{position:absolute;display:flex;align-items:center;font-family:var(--rc-font-display);font-weight:700;letter-spacing:.02em;color:var(--rc-text)}
.rc-logo img{display:block;height:100%;width:auto}
.rc-page{position:absolute;right:var(--rc-safe-margin);bottom:var(--rc-safe-margin);font-family:var(--rc-font-body);font-size:24px;line-height:1;color:var(--rc-text);opacity:.6}
.a-hero{position:absolute;inset:0;width:100%;height:100%}
.a-shade{position:absolute;inset:0;background:linear-gradient(to top,rgba(14,10,6,.82) 0%,rgba(14,10,6,.55) 38%,rgba(14,10,6,0) 68%)}
.a-text{position:absolute;left:var(--rc-safe-margin);right:var(--rc-safe-margin);bottom:calc(var(--rc-safe-margin) + 48px + 44px);display:flex;flex-direction:column;gap:20px;color:#fff;text-shadow:0 2px 18px rgba(0,0,0,.35)}
.a-kicker{color:var(--rc-accent-on-dark,#F2B38E);text-transform:uppercase;letter-spacing:.14em;font-weight:600}
.a-sub{opacity:.92}
[data-template="A"] .rc-logo,[data-template="A"] .rc-page{color:#fff}
</style>
</head>
<body>
<div class="rc-slide" data-slide-id="fx-no-optionals" data-template="A" style="--rc-bg:#FAF6EF;--rc-surface:#FFFFFF;--rc-text:#1F1B16;--rc-accent:#B5532F;--rc-positive:#3F7D4E;--rc-negative:#B3382C;--rc-font-display:"Fraunces", serif;--rc-font-body:"Inter", sans-serif;--rc-safe-margin:72px;">
<img class="img a-hero" data-image="hero" alt="" src="data:image/webp;base64,UklGRg==">
<div class="a-shade"></div>
<div class="a-text">

<div class="slot display a-headline" data-slot="headline" data-fit data-fit-min="64" data-fit-max="96" style="font-size:96px;max-height:323px">Solo el titular</div>

</div>
<div class="rc-logo" data-logo style="bottom:var(--rc-safe-margin);left:var(--rc-safe-margin);height:48px;font-size:29px">Reg.Chef</div>
<div class="rc-page" data-page>1/6</div>
</div>
<script>(function () {
  var STEP = 2;
  function overflows(el) {
    return el.scrollHeight > el.clientHeight + 1 || el.scrollWidth > el.clientWidth + 1;
  }
  function fit() {
    var nodes = document.querySelectorAll("[data-fit]");
    for (var i = 0; i < nodes.length; i++) {
      var el = nodes[i];
      var max = Number(el.getAttribute("data-fit-max"));
      var min = Number(el.getAttribute("data-fit-min"));
      var size = max;
      el.style.fontSize = size + "px";
      while (size > min && overflows(el)) {
        size = Math.max(min, size - STEP);
        el.style.fontSize = size + "px";
      }
      if (overflows(el)) el.setAttribute("data-overflow", "true");
      el.setAttribute("data-font-px", String(size));
    }
    document.documentElement.setAttribute("data-fit-done", "true");
  }
  window.__rcFit = fit;
  var ready = document.fonts && document.fonts.ready ? document.fonts.ready : Promise.resolve();
  ready.then(fit, fit);
})();</script>
</body>
</html>
"
`;

exports[`template A > fixture special-chars is valid for the template and renders a stable page 1`] = `
"<!doctype html>
<html lang="en" data-template="A" data-template-version="1.0.0">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=1080,initial-scale=1">
<style>
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
*{box-sizing:border-box;margin:0;padding:0}
html,body{width:1080px;height:1350px;background:#fff;overflow:hidden}
.rc-slide{position:relative;width:1080px;height:1350px;overflow:hidden;background:var(--rc-bg);color:var(--rc-text);font-family:var(--rc-font-body);-webkit-font-smoothing:antialiased;hyphens:none;-webkit-hyphens:none;font-kerning:normal;text-rendering:geometricPrecision}
.slot{overflow:hidden;overflow-wrap:break-word;word-break:normal}
.slot.display{font-family:var(--rc-font-display);line-height:1.12;text-wrap:balance;font-weight:600}
.slot.body{font-family:var(--rc-font-body);line-height:1.3;font-weight:400}
.img{display:block;object-fit:cover}
.img-missing{background:repeating-linear-gradient(45deg,#e8e2d8,#e8e2d8 12px,#f4f0e8 12px,#f4f0e8 24px)}
.rc-logo{position:absolute;display:flex;align-items:center;font-family:var(--rc-font-display);font-weight:700;letter-spacing:.02em;color:var(--rc-text)}
.rc-logo img{display:block;height:100%;width:auto}
.rc-page{position:absolute;right:var(--rc-safe-margin);bottom:var(--rc-safe-margin);font-family:var(--rc-font-body);font-size:24px;line-height:1;color:var(--rc-text);opacity:.6}
.a-hero{position:absolute;inset:0;width:100%;height:100%}
.a-shade{position:absolute;inset:0;background:linear-gradient(to top,rgba(14,10,6,.82) 0%,rgba(14,10,6,.55) 38%,rgba(14,10,6,0) 68%)}
.a-text{position:absolute;left:var(--rc-safe-margin);right:var(--rc-safe-margin);bottom:calc(var(--rc-safe-margin) + 48px + 44px);display:flex;flex-direction:column;gap:20px;color:#fff;text-shadow:0 2px 18px rgba(0,0,0,.35)}
.a-kicker{color:var(--rc-accent-on-dark,#F2B38E);text-transform:uppercase;letter-spacing:.14em;font-weight:600}
.a-sub{opacity:.92}
[data-template="A"] .rc-logo,[data-template="A"] .rc-page{color:#fff}
</style>
</head>
<body>
<div class="rc-slide" data-slide-id="fx-special-chars" data-template="A" style="--rc-bg:#FAF6EF;--rc-surface:#FFFFFF;--rc-text:#1F1B16;--rc-accent:#B5532F;--rc-positive:#3F7D4E;--rc-negative:#B3382C;--rc-font-display:"Fraunces", serif;--rc-font-body:"Inter", sans-serif;--rc-safe-margin:72px;">
<img class="img a-hero" data-image="hero" alt="" src="data:image/webp;base64,UklGRg==">
<div class="a-shade"></div>
<div class="a-text">
<div class="slot display a-kicker" data-slot="kicker" data-fit data-fit-min="28" data-fit-max="34" style="font-size:34px;max-height:38px">¡Ojo! ñ ü</div>
<div class="slot display a-headline" data-slot="headline" data-fit data-fit-min="64" data-fit-max="96" style="font-size:96px;max-height:323px">¿Qué pasa a 180 °C con ½ taza de aceite?</div>
<div class="slot body a-sub" data-slot="subline" data-fit data-fit-min="32" data-fit-max="38" style="font-size:38px;max-height:99px">Añade “sal” – y prueba: café, crème, naïve</div>
</div>
<div class="rc-logo" data-logo style="bottom:var(--rc-safe-margin);left:var(--rc-safe-margin);height:48px;font-size:29px">Reg.Chef</div>
<div class="rc-page" data-page>1/6</div>
</div>
<script>(function () {
  var STEP = 2;
  function overflows(el) {
    return el.scrollHeight > el.clientHeight + 1 || el.scrollWidth > el.clientWidth + 1;
  }
  function fit() {
    var nodes = document.querySelectorAll("[data-fit]");
    for (var i = 0; i < nodes.length; i++) {
      var el = nodes[i];
      var max = Number(el.getAttribute("data-fit-max"));
      var min = Number(el.getAttribute("data-fit-min"));
      var size = max;
      el.style.fontSize = size + "px";
      while (size > min && overflows(el)) {
        size = Math.max(min, size - STEP);
        el.style.fontSize = size + "px";
      }
      if (overflows(el)) el.setAttribute("data-overflow", "true");
      el.setAttribute("data-font-px", String(size));
    }
    document.documentElement.setAttribute("data-fit-done", "true");
  }
  window.__rcFit = fit;
  var ready = document.fonts && document.fonts.ready ? document.fonts.ready : Promise.resolve();
  ready.then(fit, fit);
})();</script>
</body>
</html>
"
`;

exports[`template F > fixture en-short is valid for the template and renders a stable page 1`] = `
"<!doctype html>
<html lang="en" data-template="F" data-template-version="1.0.0">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=1080,initial-scale=1">
<style>
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
*{box-sizing:border-box;margin:0;padding:0}
html,body{width:1080px;height:1350px;background:#fff;overflow:hidden}
.rc-slide{position:relative;width:1080px;height:1350px;overflow:hidden;background:var(--rc-bg);color:var(--rc-text);font-family:var(--rc-font-body);-webkit-font-smoothing:antialiased;hyphens:none;-webkit-hyphens:none;font-kerning:normal;text-rendering:geometricPrecision}
.slot{overflow:hidden;overflow-wrap:break-word;word-break:normal}
.slot.display{font-family:var(--rc-font-display);line-height:1.12;text-wrap:balance;font-weight:600}
.slot.body{font-family:var(--rc-font-body);line-height:1.3;font-weight:400}
.img{display:block;object-fit:cover}
.img-missing{background:repeating-linear-gradient(45deg,#e8e2d8,#e8e2d8 12px,#f4f0e8 12px,#f4f0e8 24px)}
.rc-logo{position:absolute;display:flex;align-items:center;font-family:var(--rc-font-display);font-weight:700;letter-spacing:.02em;color:var(--rc-text)}
.rc-logo img{display:block;height:100%;width:auto}
.rc-page{position:absolute;right:var(--rc-safe-margin);bottom:var(--rc-safe-margin);font-family:var(--rc-font-body);font-size:24px;line-height:1;color:var(--rc-text);opacity:.6}
.f-wrap{position:absolute;left:var(--rc-safe-margin);right:var(--rc-safe-margin);top:var(--rc-safe-margin);bottom:calc(var(--rc-safe-margin) + 48px + 40px);display:flex;flex-direction:column;justify-content:center;gap:32px}
.f-product{width:360px;height:360px;border-radius:28px;align-self:flex-start}
.f-offer{color:var(--rc-accent);text-transform:uppercase;letter-spacing:.12em;font-weight:600}
.f-keyword-box{align-self:flex-start;background:var(--rc-accent);color:#fff;border-radius:24px;padding:20px 44px}
.f-keyword-box .slot{color:#fff;letter-spacing:.06em}
</style>
</head>
<body>
<div class="rc-slide" data-slide-id="fx-en-short" data-template="F" style="--rc-bg:#FAF6EF;--rc-surface:#FFFFFF;--rc-text:#1F1B16;--rc-accent:#B5532F;--rc-positive:#3F7D4E;--rc-negative:#B3382C;--rc-font-display:"Fraunces", serif;--rc-font-body:"Inter", sans-serif;--rc-safe-margin:72px;">
<div class="f-wrap">
<img class="img f-product" data-image="product" alt="" src="data:image/webp;base64,UklGRg==">

<div class="slot display f-headline" data-slot="headline" data-fit data-fit-min="56" data-fit-max="80" style="font-size:80px;max-height:179px">Get the guide</div>
<div class="slot body f-body" data-slot="body" data-fit data-fit-min="32" data-fit-max="40" style="font-size:40px;max-height:208px">Comment GUIDE and we send it to you.</div>

</div>
<div class="rc-logo" data-logo style="bottom:var(--rc-safe-margin);left:var(--rc-safe-margin);height:48px;font-size:29px">Reg.Chef</div>
<div class="rc-page" data-page>1/6</div>
</div>
<script>(function () {
  var STEP = 2;
  function overflows(el) {
    return el.scrollHeight > el.clientHeight + 1 || el.scrollWidth > el.clientWidth + 1;
  }
  function fit() {
    var nodes = document.querySelectorAll("[data-fit]");
    for (var i = 0; i < nodes.length; i++) {
      var el = nodes[i];
      var max = Number(el.getAttribute("data-fit-max"));
      var min = Number(el.getAttribute("data-fit-min"));
      var size = max;
      el.style.fontSize = size + "px";
      while (size > min && overflows(el)) {
        size = Math.max(min, size - STEP);
        el.style.fontSize = size + "px";
      }
      if (overflows(el)) el.setAttribute("data-overflow", "true");
      el.setAttribute("data-font-px", String(size));
    }
    document.documentElement.setAttribute("data-fit-done", "true");
  }
  window.__rcFit = fit;
  var ready = document.fonts && document.fonts.ready ? document.fonts.ready : Promise.resolve();
  ready.then(fit, fit);
})();</script>
</body>
</html>
"
`;

exports[`template F > fixture es-long is valid for the template and renders a stable page 1`] = `
"<!doctype html>
<html lang="en" data-template="F" data-template-version="1.0.0">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=1080,initial-scale=1">
<style>
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
*{box-sizing:border-box;margin:0;padding:0}
html,body{width:1080px;height:1350px;background:#fff;overflow:hidden}
.rc-slide{position:relative;width:1080px;height:1350px;overflow:hidden;background:var(--rc-bg);color:var(--rc-text);font-family:var(--rc-font-body);-webkit-font-smoothing:antialiased;hyphens:none;-webkit-hyphens:none;font-kerning:normal;text-rendering:geometricPrecision}
.slot{overflow:hidden;overflow-wrap:break-word;word-break:normal}
.slot.display{font-family:var(--rc-font-display);line-height:1.12;text-wrap:balance;font-weight:600}
.slot.body{font-family:var(--rc-font-body);line-height:1.3;font-weight:400}
.img{display:block;object-fit:cover}
.img-missing{background:repeating-linear-gradient(45deg,#e8e2d8,#e8e2d8 12px,#f4f0e8 12px,#f4f0e8 24px)}
.rc-logo{position:absolute;display:flex;align-items:center;font-family:var(--rc-font-display);font-weight:700;letter-spacing:.02em;color:var(--rc-text)}
.rc-logo img{display:block;height:100%;width:auto}
.rc-page{position:absolute;right:var(--rc-safe-margin);bottom:var(--rc-safe-margin);font-family:var(--rc-font-body);font-size:24px;line-height:1;color:var(--rc-text);opacity:.6}
.f-wrap{position:absolute;left:var(--rc-safe-margin);right:var(--rc-safe-margin);top:var(--rc-safe-margin);bottom:calc(var(--rc-safe-margin) + 48px + 40px);display:flex;flex-direction:column;justify-content:center;gap:32px}
.f-product{width:360px;height:360px;border-radius:28px;align-self:flex-start}
.f-offer{color:var(--rc-accent);text-transform:uppercase;letter-spacing:.12em;font-weight:600}
.f-keyword-box{align-self:flex-start;background:var(--rc-accent);color:#fff;border-radius:24px;padding:20px 44px}
.f-keyword-box .slot{color:#fff;letter-spacing:.06em}
</style>
</head>
<body>
<div class="rc-slide" data-slide-id="fx-es-long" data-template="F" style="--rc-bg:#FAF6EF;--rc-surface:#FFFFFF;--rc-text:#1F1B16;--rc-accent:#B5532F;--rc-positive:#3F7D4E;--rc-negative:#B3382C;--rc-font-display:"Fraunces", serif;--rc-font-body:"Inter", sans-serif;--rc-safe-margin:72px;">
<div class="f-wrap">
<img class="img f-product" data-image="product" alt="" src="data:image/webp;base64,UklGRg==">
<div class="slot body f-offer" data-slot="offerName" data-fit data-fit-min="32" data-fit-max="40" style="font-size:40px;max-height:52px">Guía de arroz</div>
<div class="slot display f-headline" data-slot="headline" data-fit data-fit-min="56" data-fit-max="80" style="font-size:80px;max-height:179px">Llévate la guía completa del arroz perfecto</div>
<div class="slot body f-body" data-slot="body" data-fit data-fit-min="32" data-fit-max="40" style="font-size:40px;max-height:208px">Comenta la palabra GUÍA y te la enviamos por mensaje directo, con recetas y tiempos.</div>
<div class="f-keyword-box"><div class="slot display f-keyword" data-slot="keyword" data-fit data-fit-min="48" data-fit-max="72" style="font-size:72px;max-height:81px">GUÍA</div></div>
</div>
<div class="rc-logo" data-logo style="bottom:var(--rc-safe-margin);left:var(--rc-safe-margin);height:48px;font-size:29px">Reg.Chef</div>
<div class="rc-page" data-page>1/6</div>
</div>
<script>(function () {
  var STEP = 2;
  function overflows(el) {
    return el.scrollHeight > el.clientHeight + 1 || el.scrollWidth > el.clientWidth + 1;
  }
  function fit() {
    var nodes = document.querySelectorAll("[data-fit]");
    for (var i = 0; i < nodes.length; i++) {
      var el = nodes[i];
      var max = Number(el.getAttribute("data-fit-max"));
      var min = Number(el.getAttribute("data-fit-min"));
      var size = max;
      el.style.fontSize = size + "px";
      while (size > min && overflows(el)) {
        size = Math.max(min, size - STEP);
        el.style.fontSize = size + "px";
      }
      if (overflows(el)) el.setAttribute("data-overflow", "true");
      el.setAttribute("data-font-px", String(size));
    }
    document.documentElement.setAttribute("data-fit-done", "true");
  }
  window.__rcFit = fit;
  var ready = document.fonts && document.fonts.ready ? document.fonts.ready : Promise.resolve();
  ready.then(fit, fit);
})();</script>
</body>
</html>
"
`;

exports[`template F > fixture max-length is valid for the template and renders a stable page 1`] = `
"<!doctype html>
<html lang="en" data-template="F" data-template-version="1.0.0">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=1080,initial-scale=1">
<style>
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
*{box-sizing:border-box;margin:0;padding:0}
html,body{width:1080px;height:1350px;background:#fff;overflow:hidden}
.rc-slide{position:relative;width:1080px;height:1350px;overflow:hidden;background:var(--rc-bg);color:var(--rc-text);font-family:var(--rc-font-body);-webkit-font-smoothing:antialiased;hyphens:none;-webkit-hyphens:none;font-kerning:normal;text-rendering:geometricPrecision}
.slot{overflow:hidden;overflow-wrap:break-word;word-break:normal}
.slot.display{font-family:var(--rc-font-display);line-height:1.12;text-wrap:balance;font-weight:600}
.slot.body{font-family:var(--rc-font-body);line-height:1.3;font-weight:400}
.img{display:block;object-fit:cover}
.img-missing{background:repeating-linear-gradient(45deg,#e8e2d8,#e8e2d8 12px,#f4f0e8 12px,#f4f0e8 24px)}
.rc-logo{position:absolute;display:flex;align-items:center;font-family:var(--rc-font-display);font-weight:700;letter-spacing:.02em;color:var(--rc-text)}
.rc-logo img{display:block;height:100%;width:auto}
.rc-page{position:absolute;right:var(--rc-safe-margin);bottom:var(--rc-safe-margin);font-family:var(--rc-font-body);font-size:24px;line-height:1;color:var(--rc-text);opacity:.6}
.f-wrap{position:absolute;left:var(--rc-safe-margin);right:var(--rc-safe-margin);top:var(--rc-safe-margin);bottom:calc(var(--rc-safe-margin) + 48px + 40px);display:flex;flex-direction:column;justify-content:center;gap:32px}
.f-product{width:360px;height:360px;border-radius:28px;align-self:flex-start}
.f-offer{color:var(--rc-accent);text-transform:uppercase;letter-spacing:.12em;font-weight:600}
.f-keyword-box{align-self:flex-start;background:var(--rc-accent);color:#fff;border-radius:24px;padding:20px 44px}
.f-keyword-box .slot{color:#fff;letter-spacing:.06em}
</style>
</head>
<body>
<div class="rc-slide" data-slide-id="fx-max-length" data-template="F" style="--rc-bg:#FAF6EF;--rc-surface:#FFFFFF;--rc-text:#1F1B16;--rc-accent:#B5532F;--rc-positive:#3F7D4E;--rc-negative:#B3382C;--rc-font-display:"Fraunces", serif;--rc-font-body:"Inter", sans-serif;--rc-safe-margin:72px;">
<div class="f-wrap">
<img class="img f-product" data-image="product" alt="" src="data:image/webp;base64,UklGRg==">
<div class="slot body f-offer" data-slot="offerName" data-fit data-fit-min="32" data-fit-max="40" style="font-size:40px;max-height:52px">Nombre de la oferta Nombre de la oferta </div>
<div class="slot display f-headline" data-slot="headline" data-fit data-fit-min="56" data-fit-max="80" style="font-size:80px;max-height:179px">Titular de llamada a la acción Titular de llamada a la acció</div>
<div class="slot body f-body" data-slot="body" data-fit data-fit-min="32" data-fit-max="40" style="font-size:40px;max-height:208px">Texto del cuerpo con el máximo permitido de caracteres Texto del cuerpo con el máximo permitido de caracteres Texto del cuerpo con el máximo permitido de caract</div>
<div class="f-keyword-box"><div class="slot display f-keyword" data-slot="keyword" data-fit data-fit-min="48" data-fit-max="72" style="font-size:72px;max-height:81px">ABCDEFGHIJKLMNOP</div></div>
</div>
<div class="rc-logo" data-logo style="bottom:var(--rc-safe-margin);left:var(--rc-safe-margin);height:48px;font-size:29px">Reg.Chef</div>
<div class="rc-page" data-page>1/6</div>
</div>
<script>(function () {
  var STEP = 2;
  function overflows(el) {
    return el.scrollHeight > el.clientHeight + 1 || el.scrollWidth > el.clientWidth + 1;
  }
  function fit() {
    var nodes = document.querySelectorAll("[data-fit]");
    for (var i = 0; i < nodes.length; i++) {
      var el = nodes[i];
      var max = Number(el.getAttribute("data-fit-max"));
      var min = Number(el.getAttribute("data-fit-min"));
      var size = max;
      el.style.fontSize = size + "px";
      while (size > min && overflows(el)) {
        size = Math.max(min, size - STEP);
        el.style.fontSize = size + "px";
      }
      if (overflows(el)) el.setAttribute("data-overflow", "true");
      el.setAttribute("data-font-px", String(size));
    }
    document.documentElement.setAttribute("data-fit-done", "true");
  }
  window.__rcFit = fit;
  var ready = document.fonts && document.fonts.ready ? document.fonts.ready : Promise.resolve();
  ready.then(fit, fit);
})();</script>
</body>
</html>
"
`;

exports[`template F > fixture no-optionals is valid for the template and renders a stable page 1`] = `
"<!doctype html>
<html lang="en" data-template="F" data-template-version="1.0.0">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=1080,initial-scale=1">
<style>
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
*{box-sizing:border-box;margin:0;padding:0}
html,body{width:1080px;height:1350px;background:#fff;overflow:hidden}
.rc-slide{position:relative;width:1080px;height:1350px;overflow:hidden;background:var(--rc-bg);color:var(--rc-text);font-family:var(--rc-font-body);-webkit-font-smoothing:antialiased;hyphens:none;-webkit-hyphens:none;font-kerning:normal;text-rendering:geometricPrecision}
.slot{overflow:hidden;overflow-wrap:break-word;word-break:normal}
.slot.display{font-family:var(--rc-font-display);line-height:1.12;text-wrap:balance;font-weight:600}
.slot.body{font-family:var(--rc-font-body);line-height:1.3;font-weight:400}
.img{display:block;object-fit:cover}
.img-missing{background:repeating-linear-gradient(45deg,#e8e2d8,#e8e2d8 12px,#f4f0e8 12px,#f4f0e8 24px)}
.rc-logo{position:absolute;display:flex;align-items:center;font-family:var(--rc-font-display);font-weight:700;letter-spacing:.02em;color:var(--rc-text)}
.rc-logo img{display:block;height:100%;width:auto}
.rc-page{position:absolute;right:var(--rc-safe-margin);bottom:var(--rc-safe-margin);font-family:var(--rc-font-body);font-size:24px;line-height:1;color:var(--rc-text);opacity:.6}
.f-wrap{position:absolute;left:var(--rc-safe-margin);right:var(--rc-safe-margin);top:var(--rc-safe-margin);bottom:calc(var(--rc-safe-margin) + 48px + 40px);display:flex;flex-direction:column;justify-content:center;gap:32px}
.f-product{width:360px;height:360px;border-radius:28px;align-self:flex-start}
.f-offer{color:var(--rc-accent);text-transform:uppercase;letter-spacing:.12em;font-weight:600}
.f-keyword-box{align-self:flex-start;background:var(--rc-accent);color:#fff;border-radius:24px;padding:20px 44px}
.f-keyword-box .slot{color:#fff;letter-spacing:.06em}
</style>
</head>
<body>
<div class="rc-slide" data-slide-id="fx-no-optionals" data-template="F" style="--rc-bg:#FAF6EF;--rc-surface:#FFFFFF;--rc-text:#1F1B16;--rc-accent:#B5532F;--rc-positive:#3F7D4E;--rc-negative:#B3382C;--rc-font-display:"Fraunces", serif;--rc-font-body:"Inter", sans-serif;--rc-safe-margin:72px;">
<div class="f-wrap">
<img class="img f-product" data-image="product" alt="" src="data:image/webp;base64,UklGRg==">

<div class="slot display f-headline" data-slot="headline" data-fit data-fit-min="56" data-fit-max="80" style="font-size:80px;max-height:179px">Guárdalo</div>
<div class="slot body f-body" data-slot="body" data-fit data-fit-min="32" data-fit-max="40" style="font-size:40px;max-height:208px">Te servirá la próxima vez.</div>

</div>
<div class="rc-logo" data-logo style="bottom:var(--rc-safe-margin);left:var(--rc-safe-margin);height:48px;font-size:29px">Reg.Chef</div>
<div class="rc-page" data-page>1/6</div>
</div>
<script>(function () {
  var STEP = 2;
  function overflows(el) {
    return el.scrollHeight > el.clientHeight + 1 || el.scrollWidth > el.clientWidth + 1;
  }
  function fit() {
    var nodes = document.querySelectorAll("[data-fit]");
    for (var i = 0; i < nodes.length; i++) {
      var el = nodes[i];
      var max = Number(el.getAttribute("data-fit-max"));
      var min = Number(el.getAttribute("data-fit-min"));
      var size = max;
      el.style.fontSize = size + "px";
      while (size > min && overflows(el)) {
        size = Math.max(min, size - STEP);
        el.style.fontSize = size + "px";
      }
      if (overflows(el)) el.setAttribute("data-overflow", "true");
      el.setAttribute("data-font-px", String(size));
    }
    document.documentElement.setAttribute("data-fit-done", "true");
  }
  window.__rcFit = fit;
  var ready = document.fonts && document.fonts.ready ? document.fonts.ready : Promise.resolve();
  ready.then(fit, fit);
})();</script>
</body>
</html>
"
`;

exports[`template F > fixture special-chars is valid for the template and renders a stable page 1`] = `
"<!doctype html>
<html lang="en" data-template="F" data-template-version="1.0.0">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=1080,initial-scale=1">
<style>
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Fraunces";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;}
@font-face{font-family:"Inter";font-style:normal;font-weight:100 900;font-display:block;src:url(data:font/woff2;base64,…) format("woff2");unicode-range:U+0100-02BA,U+02BD-02C5,U+02C7-02CC,U+02CE-02D7,U+02DD-02FF,U+0304,U+0308,U+0329,U+1D00-1DBF,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20C0,U+2113,U+2C60-2C7F,U+A720-A7FF;}
*{box-sizing:border-box;margin:0;padding:0}
html,body{width:1080px;height:1350px;background:#fff;overflow:hidden}
.rc-slide{position:relative;width:1080px;height:1350px;overflow:hidden;background:var(--rc-bg);color:var(--rc-text);font-family:var(--rc-font-body);-webkit-font-smoothing:antialiased;hyphens:none;-webkit-hyphens:none;font-kerning:normal;text-rendering:geometricPrecision}
.slot{overflow:hidden;overflow-wrap:break-word;word-break:normal}
.slot.display{font-family:var(--rc-font-display);line-height:1.12;text-wrap:balance;font-weight:600}
.slot.body{font-family:var(--rc-font-body);line-height:1.3;font-weight:400}
.img{display:block;object-fit:cover}
.img-missing{background:repeating-linear-gradient(45deg,#e8e2d8,#e8e2d8 12px,#f4f0e8 12px,#f4f0e8 24px)}
.rc-logo{position:absolute;display:flex;align-items:center;font-family:var(--rc-font-display);font-weight:700;letter-spacing:.02em;color:var(--rc-text)}
.rc-logo img{display:block;height:100%;width:auto}
.rc-page{position:absolute;right:var(--rc-safe-margin);bottom:var(--rc-safe-margin);font-family:var(--rc-font-body);font-size:24px;line-height:1;color:var(--rc-text);opacity:.6}
.f-wrap{position:absolute;left:var(--rc-safe-margin);right:var(--rc-safe-margin);top:var(--rc-safe-margin);bottom:calc(var(--rc-safe-margin) + 48px + 40px);display:flex;flex-direction:column;justify-content:center;gap:32px}
.f-product{width:360px;height:360px;border-radius:28px;align-self:flex-start}
.f-offer{color:var(--rc-accent);text-transform:uppercase;letter-spacing:.12em;font-weight:600}
.f-keyword-box{align-self:flex-start;background:var(--rc-accent);color:#fff;border-radius:24px;padding:20px 44px}
.f-keyword-box .slot{color:#fff;letter-spacing:.06em}
</style>
</head>
<body>
<div class="rc-slide" data-slide-id="fx-special-chars" data-template="F" style="--rc-bg:#FAF6EF;--rc-surface:#FFFFFF;--rc-text:#1F1B16;--rc-accent:#B5532F;--rc-positive:#3F7D4E;--rc-negative:#B3382C;--rc-font-display:"Fraunces", serif;--rc-font-body:"Inter", sans-serif;--rc-safe-margin:72px;">
<div class="f-wrap">
<img class="img f-product" data-image="product" alt="" src="data:image/webp;base64,UklGRg==">

<div class="slot display f-headline" data-slot="headline" data-fit data-fit-min="56" data-fit-max="80" style="font-size:80px;max-height:179px">¿Listo? ¡Guarda esta receta!</div>
<div class="slot body f-body" data-slot="body" data-fit data-fit-min="32" data-fit-max="40" style="font-size:40px;max-height:208px">Hornea a 200 °C, 2½ tazas – sin prisa. Más en el perfil.</div>
<div class="f-keyword-box"><div class="slot display f-keyword" data-slot="keyword" data-fit data-fit-min="48" data-fit-max="72" style="font-size:72px;max-height:81px">ÑAM</div></div>
</div>
<div class="rc-logo" data-logo style="bottom:var(--rc-safe-margin);left:var(--rc-safe-margin);height:48px;font-size:29px">Reg.Chef</div>
<div class="rc-page" data-page>1/6</div>
</div>
<script>(function () {
  var STEP = 2;
  function overflows(el) {
    return el.scrollHeight > el.clientHeight + 1 || el.scrollWidth > el.clientWidth + 1;
  }
  function fit() {
    var nodes = document.querySelectorAll("[data-fit]");
    for (var i = 0; i < nodes.length; i++) {
      var el = nodes[i];
      var max = Number(el.getAttribute("data-fit-max"));
      var min = Number(el.getAttribute("data-fit-min"));
      var size = max;
      el.style.fontSize = size + "px";
      while (size > min && overflows(el)) {
        size = Math.max(min, size - STEP);
        el.style.fontSize = size + "px";
      }
      if (overflows(el)) el.setAttribute("data-overflow", "true");
      el.setAttribute("data-font-px", String(size));
    }
    document.documentElement.setAttribute("data-fit-done", "true");
  }
  window.__rcFit = fit;
  var ready = document.fonts && document.fonts.ready ? document.fonts.ready : Promise.resolve();
  ready.then(fit, fit);
})();</script>
</body>
</html>
"
`;
